--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1 class="logo">
                 <span class="text-primary"><i class="fas fa-book-open"></i> Edge</span>Ledger
             </h1>
-            
+
             <nav>
                 <ul>
                     <li><a href="#home">Home</a></li>
@@ -34,5 +34,56 @@
         </div>
     </header>
     
+    <main>
+        <!-- About: Icons -->
+        <section id="about" class="icons bg-light">
+            <div class="flex-items">
+                <div>
+                    <i class="fas fa-university fa-2x"></i>
+                    <div>
+                        <h3>Investment Banking</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam, alias.</p>
+                    </div>
+                </div>
+                <div>
+                    <i class="fas fa-book-reader fa-2x"></i>
+                    <div>
+                        <h3>Portfolio Manager</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam, alias.</p>
+                    </div>
+                </div>
+                <div>
+                    <i class="fas fa-pencil-alt fa-2x"></i>
+                    <div>
+                        <h3>Tax & Custodial </h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam, alias.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- About: Solutions-->
+        <section class="solutions flex-columns">
+            <div class="row">
+                <div class="column">
+                    <div class="column-1">
+                        <img src="/image_resources/home/people.jpg" alt="">
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="column-2 bg-primary">
+                        <h4>What you are looking for</h4>
+                        <h2>We provide bespoke solutions</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium doloribus eius doloremque dicta blanditiis nobis, earum debitis aperiam delectus atque ab deleniti natus corrupti expedita libero quo architecto necessitatibus ex.</p>
+                            <a href="#" class="btn btn-outline">
+                                <i class="fas fa-chevron"></i> 
+                                Read More
+                            </a>
+                    </div>
+                </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
