--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <h4>April 16 2020</h4>
                         <h2>Blog Post One</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium doloribus eius doloremque dicta blanditiis nobis, earum debitis aperiam delectus atque ab deleniti natus corrupti expedita libero quo architecto necessitatibus ex.</p>
-                            <a href="#" class="btn btn-outline">
+                            <a href="blog.html" class="btn btn-outline">
                                 <i class="fas fa-chevron"></i> 
                                 Read Our Blog
                             </a>
